--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <br/>
     <nav>
         <ul type="none">
-            <a id="active" href="index.html"></a>
-            <a id="home">Home</a>
+            <a id="active" href="index.html">Home</a>
             <a id="photos">Photo Gallery</a>
             <a id="paintings">Painting Gallery</a>
             <a id="profile">My Account</a>
