--- a/flexbox-practice.html
+++ b/flexbox-practice.html
@@ -15,7 +15,7 @@
             <a id="active" href="index.html"><li id="home">Home</li></a>
             <a><li id="photos">Photo Gallery</li></a>
             <a><li id="paintings">Painting Gallery</li></a>
-            <a><li id="profile">,y Account</li></a>
+            <a><li id="profile">Account</li></a>
             <a><li id="checkout">Checkout</li></a>
             <a><li id="signup-login">Sign Up/Login</li></a>
         </ul>
