--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
     <link rel="stylesheet" href="CSS/external.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <a href="flexbox-practice.html"><li>Flexbox</li></a>
+        </ul>
+    </nav>
 </body>
 </html>
