--- a/flexbox-practice.html
+++ b/flexbox-practice.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flexbox Practice</title>
     <style>
-        
     </style>
     <link rel="stylesheet" href="CSS/external.css">
 </head>
@@ -16,7 +15,7 @@
             <a><li id="photos">Photo Gallery</li></a>
             <a><li id="paintings">Painting Gallery</li></a>
             <a><li id="profile">Account</li></a>
-            <a><li id="checkout">Checkout</li></a>
+            <a style="flex-grow: 4;"><li id="checkout">Checkout</li></a>
             <a><li id="signup-login">Sign Up/Login</li></a>
         </ul>
     </nav>
